--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "pages": [
-    "pages/home/home",
+    "pages/home/index/index",
     "pages/user/index/index",
     "pages/auth/login/login",
     "pages/auth/account-login/account-login",
@@ -21,7 +21,7 @@
     "color": "#666",
     "list": [
       {
-        "pagePath": "pages/home/home",
+        "pagePath": "pages/home/index/index",
         "iconPath": "static/images/home.png",
         "selectedIconPath": "static/images/home@selected.png",
         "text": "首页"
